# wz

./: .gitignore  CMakeLists.txt  Doxygen  README.md  make.bat
CMake/: CFlags.cmake  FindCheck.cmake
CMakeModules/: FindCheck.cmake
doc/: address-decryption.dia  characters-decryption.dia  characters-encryption.dia  data-structure.dia  version-encryption.dia
src/: CMakeLists.txt  byteorder.c  byteorder.h  file.c  file.h  main.c  main.h  mem.c  mem.h  predef.h  tags  type.h  unicode.c  unicode.h  wrap.h  wz.c  wz.h  wz.pc.cmake
tests/: CMakeLists.txt  check.h  check_fix.h  check_portable.h  encode.c  file.c  file.h  mem.c  mem.h  suite.c  suite.h  test_file.c  test_file.h  test_suite.c  wrap_alloc.c  wrap_alloc.h
